<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.nicklawler222.shopping.PurchaseActivity">

    <ProgressBar android:id="@+id/purchase_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RelativeLayout android:id="@+id/purchase_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <TextView
                android:id="@+id/order_total"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="start"
                android:text="@string/prompt_order"
                android:textStyle="bold"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/order_total_num"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Example Title"
                android:gravity="center"
                android:textColor="@color/yellow"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/order_total"
                android:layout_toEndOf="@+id/order_total"
                android:layout_marginLeft="17dp"/>

            <!--SHIP STUFF-->
            <TextView
                android:id="@+id/shipStuff"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="start"
                android:text="@string/prompt_shipAddr"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_below="@+id/order_total"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <EditText android:id="@+id/user_first_name" android:layout_width="175dp"
                android:layout_height="wrap_content" android:hint="@string/hint_firstName"
                android:inputType="text|textCapWords|textAutoComplete" android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:layout_below="@+id/shipStuff"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

            <EditText android:id="@+id/user_last_name" android:layout_width="175dp"
                android:layout_height="wrap_content" android:hint="@string/hint_lastName"
                android:inputType="text|textCapWords|textAutoComplete" android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:layout_toEndOf="@+id/user_first_name"
                android:layout_alignTop="@+id/user_first_name"
                android:layout_toRightOf="@+id/user_first_name" />



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_first_name"
                android:hint="@string/hint_Addr1"
                android:inputType="textPostalAddress|textCapWords"
                android:ems="10"
                android:imeOptions="actionNext"
                android:id="@+id/shipAddr1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shipAddr1"
                android:hint="@string/hint_Addr2"
                android:inputType="textPostalAddress|textCapWords"
                android:ems="10"
                android:imeOptions="actionNext"
                android:id="@+id/shipAddr2" />
            <EditText
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shipAddr2"
                android:hint="@string/hint_City"
                android:inputType="textPostalAddress|textCapWords"
                android:ems="10"
                android:imeOptions="actionNext"
                android:id="@+id/shipCity" />
            <EditText
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/shipCity"
                android:hint="@string/hint_State"
                android:inputType="textPostalAddress|textCapCharacters"
                android:ems="10"
                android:maxLength="2"
                android:imeOptions="actionNext"
                android:id="@+id/shipState"
                android:layout_below="@+id/shipAddr2"
                android:layout_toRightOf="@+id/shipCity" />
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/shipState"
                android:hint="@string/hint_Zip"
                android:inputType="number"
                android:ems="10"
                android:maxLength="5"
                android:imeOptions="actionNext"
                android:id="@+id/shipZip"
                android:layout_below="@+id/shipAddr2"
                android:layout_toRightOf="@+id/shipState" />
            <!--BILLING-->
            <TextView
                android:id="@+id/billStuff"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@+id/shipCity"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/prompt_billAddr"
                android:textStyle="bold"
                android:textSize="14sp"/>
            <EditText android:id="@+id/bill_user_first_name" android:layout_width="175dp"
                android:layout_height="wrap_content" android:hint="@string/hint_firstName"
                android:inputType="text|textCapWords|textAutoComplete" android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:layout_below="@+id/billStuff"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

            <EditText android:id="@+id/bill_user_last_name" android:layout_width="175dp"
                android:layout_height="wrap_content" android:hint="@string/hint_lastName"
                android:inputType="text|textCapWords|textAutoComplete" android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:layout_toEndOf="@+id/bill_user_first_name"
                android:layout_alignTop="@+id/bill_user_first_name"
                android:layout_toRightOf="@+id/bill_user_first_name" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bill_user_first_name"
                android:hint="@string/hint_Addr1"
                android:inputType="textPostalAddress|textCapWords"
                android:ems="10"
                android:imeOptions="actionNext"
                android:id="@+id/billAddr1" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/billAddr1"
                android:hint="@string/hint_Addr2"
                android:inputType="textPostalAddress|textCapWords"
                android:ems="10"
                android:imeOptions="actionNext"
                android:id="@+id/billAddr2" />
            <EditText
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/billAddr2"
                android:hint="@string/hint_City"
                android:inputType="textPostalAddress|textCapWords"
                android:ems="10"
                android:imeOptions="actionNext"
                android:id="@+id/billCity" />
            <EditText
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/billCity"
                android:hint="@string/hint_State"
                android:inputType="textPostalAddress|textCapCharacters"
                android:ems="10"
                android:maxLength="2"
                android:imeOptions="actionNext"
                android:id="@+id/billState"
                android:layout_below="@+id/billAddr2"
                android:layout_toRightOf="@+id/billCity" />
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/billState"
                android:hint="@string/hint_Zip"
                android:inputType="number"
                android:ems="10"
                android:maxLength="5"
                android:imeOptions="actionNext"
                android:id="@+id/billZip"
                android:layout_below="@+id/billAddr2"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <!--CARD INFO-->
            <TextView
            android:id="@+id/cardStuff"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/billCity"
            android:gravity="start"
            android:text="@string/prompt_cardInfo"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="14sp"/>
            <EditText
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardStuff"
                android:inputType="number"
                android:ems="10"
                android:maxLength="16"
                android:hint="@string/hint_cardNum"
                android:imeOptions="actionNext"
                android:id="@+id/cardNum" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/cardNum"
                android:inputType="number"
                android:ems="10"
                android:maxLength="3"
                android:hint="@string/hint_cardCVV"
                android:imeOptions="actionNext"
                android:id="@+id/cardCVV"
                android:layout_alignTop="@+id/cardNum"
                android:layout_toRightOf="@+id/cardNum" />
            <TextView
                android:id="@+id/expStuff"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/cardNum"
                android:gravity="start"
                android:text="@string/prompt_cardExp"
                android:textStyle="bold"
                android:textSize="14sp"/>
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/expStuff"
                android:inputType="numberSigned"
                android:ems="10"
                android:maxLength="2"
                android:hint="@string/hint_cardExpMon"
                android:imeOptions="actionNext"
                android:id="@+id/cardExpMon"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:id="@+id/slash"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_toEndOf="@id/cardExpMon"
                android:layout_toRightOf="@id/cardExpMon"
                android:layout_alignTop="@id/cardExpMon"
                android:gravity="start"
                android:text="@string/prompt_slash"
                android:textSize="30sp"/>
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/slash"
                android:layout_toRightOf="@id/slash"
                android:layout_alignTop="@id/slash"
                android:inputType="numberSigned"
                android:ems="10"
                android:maxLength="4"
                android:hint="@string/hint_cardEXpYr"
                android:imeOptions="actionDone"
                android:id="@+id/cardExpYR"
                android:layout_gravity="center_horizontal" />

            <!--EMAIL-->
            <TextView
                android:id="@+id/emailStuff"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/cardExpMon"
                android:gravity="start"
                android:text="@string/prompt_email2"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="14sp"/>
            <EditText
                android:id="@+id/purchase_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailStuff"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"/>

            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/action_purchase"
                android:textStyle="bold"
                android:layout_below="@id/purchase_email"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"
                android:onClick="executePurchase"/>


        </RelativeLayout>
    </ScrollView>

</LinearLayout>

