<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/rating_label"
            android:text="@string/rate_label"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RatingBar
            android:id="@+id/rating"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleSmall"
            android:numStars="5"
            android:stepSize="0.5"
            android:rating="0.0"
            android:isIndicator="false" />

        <!--<TextView-->
        <!--android:id="@+id/rating_result_id"-->
        <!--android:text="@string/rating_result_txt"-->
        <!--android:layout_marginTop="50dp"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->

        <TextView
            android:id="@+id/rating_value"
            android:text=""
            android:layout_marginLeft="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <EditText
        android:id="@+id/review_post"
        android:hint="@string/review_box_fill"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:singleLine="false"
        android:lines="10"
        android:layout_marginTop="30dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"/>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:id="@+id/cancel_review"
            android:layout_marginLeft="100dip"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/submit_review"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/submit"/>
        <!--android:onClick="selfDestruct" />-->
    </RelativeLayout>



</LinearLayout>