<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout android:id="@+id/menu_ll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:text="@string/user_list_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/userTextView"
                android:text="@string/user_list_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="0dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/rating_list_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RatingBar
                android:id="@+id/user_rating"
                android:layout_marginLeft="15dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:numStars="5"
                android:stepSize="0.5"
                android:isIndicator="true" />

            <TextView
                android:id="@+id/ratingTextView"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/rating_list_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:layout_marginLeft="15dp"/>

        </LinearLayout>

        <TextView
            android:text="@string/review_list_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/reviewTextView"
            android:text="@string/review_list_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="@dimen/activity_vertical_margin"/>


    </LinearLayout>

</ScrollView>